--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,8 @@ body {
   font-size: calc(12px + 0.4vw);
   font-family: "Roboto", sans-serif;
   padding-left: 1.5vw;
+  color: #5b8cbd;
+  font-weight: 400;
 }
 
 #bottombar {
