--- a/styles.css
+++ b/styles.css
@@ -337,7 +337,7 @@ a:hover {
   padding-bottom: 0vw;
   animation: draw-line2 4s;
   animation-fill-mode: forwards;
-  width: 38vw;
+  width: 40w;
 }
 
 @keyframes draw-line2 {
