--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,19 @@ a:hover {
 
   font-weight: 400;
 }
+
+#textBox-main2-header {
+  margin-top: 3vw;
+}
+
+#spotlightlink {
+  top: 1vw;
+  font-weight: 500;
+  border: 3px solid #c63c3c;
+  padding: 10px;
+  text-decoration: none;
+}
+
 #textBox-main2-header a {
   text-decoration: none;
   color: #5b8cbd;
@@ -356,11 +369,10 @@ a:hover {
 }
 
 #collegeGradPic {
-  padding-left: 2vw;
-  width: 43vw;
-  padding-top: 2vw;
-
+  object-fit: cover;
   position: relative;
+  width: 48vw;
+  height: 45vw;
 }
 
 #headerbox,
@@ -577,8 +589,11 @@ footer .bottom_text {
 }
 
 #picBox {
-  padding-bottom: 2vw;
-  padding-top: 2vw;
+  margin-top: 4vw;
+  margin-right: 10vw;
+  margin-left: 4vw;
+  width: 48vw;
+  height: 45vw;
 }
 
 #contactuspagedivision {
@@ -1057,14 +1072,19 @@ textarea {
     }
   }
 
-  #collegeGradPic {
-    padding-top: 3vw;
-    padding-left: 0vw;
+  #picBox {
+    margin-top: 6vw;
+    margin-right: 5vw;
+    margin-left: 5vw;
     width: 90vw;
-    height: 50vh;
+    height: 45vw;
+  }
+
+  #collegeGradPic {
+    width: 90vw;
+    height: 45vw;
     object-fit: cover;
     position: relative;
-    left: 5vw;
   }
 
   #pageContent {
@@ -1414,12 +1434,20 @@ textarea {
     overflow-y: hidden;
   }
 
+  #picBox {
+    margin-top: 8vw;
+    margin-bottom: 10vw;
+    margin-right: 4vw;
+    margin-left: 4vw;
+    width: 92vw;
+    height: 55vw;
+  }
+
   #collegeGradPic {
-    padding-top: 6vw;
-    padding-left: 0vw;
-    width: 90vw;
+    width: 92vw;
+    height: 55vw;
+    object-fit: cover;
     position: relative;
-    left: 4vw;
   }
 
   #pageContent {
@@ -1797,14 +1825,20 @@ textarea {
     color: black;
   }
 
+  #picBox {
+    margin-top: 12vw;
+    margin-bottom: 0vw;
+    margin-right: 4vw;
+    margin-left: 4vw;
+    width: 92vw;
+    height: 80vw;
+  }
+
   #collegeGradPic {
-    padding-top: 8vw;
-    padding-left: 0vw;
-    width: 90vw;
-    height: 47vh;
+    width: 92vw;
+    height: 80vw;
     object-fit: cover;
     position: relative;
-    left: 5vw;
   }
 
   #pageContent {
