--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   background-color: #faf9f6;
+  overflow-x: hidden;
 }
 
 #home a {
@@ -39,7 +40,7 @@ body {
   border: none;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  font-size: calc(12px + 0.6vw);
+  font-size: calc(12px + 0.7vw);
   position: relative;
   color: black;
   background-color: #faf9f6;
@@ -214,7 +215,6 @@ a:hover {
   position: relative;
   display: block;
   z-index: 0;
-  padding-bottom: 4vw;
   padding-top: 18vw;
   overflow-y: hidden;
   overflow-x: hidden;
@@ -223,6 +223,56 @@ a:hover {
   grid-template-rows: 1fr;
   gap: 0px 0px;
   grid-template-areas: ". .";
+  height: fit-content;
+}
+
+#horizontalLine {
+  width: 7px;
+  background-color: #c63c3c;
+  height: 100%;
+  margin-right: 1vw;
+}
+
+#spotlightlink {
+  top: 1vw;
+  border: 3px solid #c63c3c;
+  padding: 10px;
+  text-decoration: none;
+}
+
+#spotlightHeader {
+  color: #c63c3c;
+  font-size: calc(12px + 0.9vw);
+  font-weight: 500;
+}
+#spotlightBox {
+  width: 90vw;
+  height: fit-content;
+  margin-left: 4vw;
+  margin-bottom: 6vw;
+  padding-top: 4vw;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: calc(12px + 0.7vw);
+  display: grid;
+  grid-template-columns: 2% 55% 60%;
+  grid-template-rows: 100%;
+  gap: 0px 0px;
+  font-weight: 500;
+  grid-template-areas: ". . .";
+  text-decoration: none;
+}
+
+#dateandsource {
+  font-weight: 300;
+}
+
+#spotlightText {
+  color: black;
+  font-weight: 500;
+}
+#spotlightBox a {
+  text-decoration: none;
 }
 
 #pageContent2 {
@@ -297,7 +347,8 @@ a:hover {
   font-weight: 300;
   position: relative;
   z-index: 1;
-  font-size: calc(12px + 0.6vw);
+  font-size: calc(12px + 0.8vw);
+  height: fit-content;
 }
 
 #textBodx-main2-header a {
@@ -312,8 +363,7 @@ a:hover {
 
 #homepageGoalsText {
   color: black;
-  line-height: 1vw;
-
+  line-height: 0.8vw;
   font-weight: 400;
 }
 
@@ -323,7 +373,6 @@ a:hover {
 
 #spotlightlink {
   top: 1vw;
-  font-weight: 500;
   border: 3px solid #c63c3c;
   padding: 10px;
   text-decoration: none;
@@ -372,9 +421,57 @@ a:hover {
   object-fit: cover;
   position: relative;
   width: 48vw;
-  height: 45vw;
+  height: 40vw;
+}
+#horizontalLine {
+  width: 5px;
+  background-color: #c63c3c;
+  height: 100%;
+  margin-right: 1vw;
+}
+#spotlightHeader {
+  color: #c63c3c;
+  font-size: calc(12px + 0.9vw);
+  font-weight: 500;
 }
 
+#dateandsource {
+  font-size: calc(12px + 0.7vw);
+}
+
+#spotlightBox {
+  width: 90vw;
+  height: fit-content;
+  margin-left: 4vw;
+  margin-bottom: 6vw;
+  padding-top: 6vw;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: calc(12px + 0.7vw);
+  display: grid;
+  grid-template-columns: 2% 55% 60%;
+  grid-template-rows: 100%;
+  gap: 0px 0px;
+  font-weight: 500;
+  grid-template-areas: ". . .";
+  text-decoration: none;
+}
+
+#spotlightImage {
+  margin-left: 1vw;
+  transform: scale(0.8);
+}
+#dateandsource {
+  font-weight: 300;
+}
+
+#spotlightText {
+  color: black;
+  font-weight: 500;
+}
+#spotlightBox a {
+  text-decoration: none;
+}
 #headerbox,
 #headerbox2,
 #headerbox3,
@@ -492,7 +589,7 @@ a {
 .link_name {
   font-family: "Roboto Slab", serif;
   font-weight: 300;
-  font-size: calc(12px + 0.6vw);
+  font-size: calc(12px + 0.7vw);
 }
 
 .box {
@@ -550,7 +647,7 @@ footer .content .link-boxes {
 
 .content .link-boxes .box li a {
   color: #fff;
-  font-size: calc(12px + 0.2vw);
+  font-size: calc(12px + 0.5vw);
   text-decoration: none;
   opacity: 0.8;
   transition: all 0.4s ease;
@@ -593,7 +690,7 @@ footer .bottom_text {
   margin-right: 10vw;
   margin-left: 4vw;
   width: 48vw;
-  height: 45vw;
+  height: 480px;
 }
 
 #contactuspagedivision {
@@ -1024,14 +1121,13 @@ textarea {
     top: 15%;
     padding-bottom: 0px;
     height: fit-content;
-    font-size: calc(12px + 0.6vw);
     color: #5b8cbd;
   }
 
   #homepageGoalsText {
     color: black;
     font-weight: 400;
-    line-height: 1.7vw;
+    line-height: 0.7vw;
   }
   #textBox-main2-header a {
     text-decoration: none;
@@ -1041,6 +1137,34 @@ textarea {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+  }
+
+  #spotlightBox {
+    width: 90vw;
+    height: fit-content;
+    margin-left: 5vw;
+    margin-bottom: 6vw;
+    padding-top: 0vw;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: calc(12px + 0.7vw);
+    display: grid;
+    grid-template-columns: 2% 60% 15%;
+    grid-template-rows: 100%;
+    gap: 0px 0px;
+    font-weight: 500;
+    grid-template-areas: ". . .";
+    text-decoration: none;
+  }
+
+  #spotlightHeader {
+    font-size: calc(12px + 1vw);
+  }
+  #spotlightText {
+    font-size: calc(12px + 1vw);
+  }
+  #dateandsource {
+    font-size: calc(12px + 1vw);
   }
 
   #homePageGoals {
@@ -1078,6 +1202,7 @@ textarea {
     margin-left: 5vw;
     width: 90vw;
     height: 45vw;
+    margin-bottom: 0vw;
   }
 
   #collegeGradPic {
@@ -1208,6 +1333,9 @@ textarea {
     margin: 0 auto;
   }
 
+  #pageContent {
+    padding-bottom: 0vw;
+  }
   #floatRight {
     display: none;
   }
@@ -1440,14 +1568,15 @@ textarea {
     margin-right: 4vw;
     margin-left: 4vw;
     width: 92vw;
-    height: 55vw;
+    height: 60vw;
   }
 
   #collegeGradPic {
     width: 92vw;
-    height: 55vw;
+    height: 60vw;
     object-fit: cover;
     position: relative;
+    background-color: #c63c3c;
   }
 
   #pageContent {
@@ -1455,11 +1584,34 @@ textarea {
     position: relative;
     display: block;
     z-index: -1;
-    padding-bottom: 4vw;
     padding-top: 20vw;
     overflow-y: hidden;
   }
 
+  #spotlightBox {
+    grid-template-columns: 2% 60% 13%;
+    padding-bottom: 6vw;
+    margin-left: 4vw;
+    margin-top: 6vw;
+  }
+
+  #spotlightHeader {
+    font-size: calc(12px + 1.3vw);
+  }
+  #spotlightText {
+    font-size: calc(12px + 1.3vw);
+  }
+
+  #spotlightInfoBox {
+    padding-left: 2vw;
+  }
+  #dateandsource {
+    font-size: calc(12px + 1.3vw);
+  }
+
+  #PhotoBox {
+    transform: scale(0.9);
+  }
   #pageContent2 {
     width: 100vw;
     position: relative;
