--- a/styles.css
+++ b/styles.css
@@ -1238,6 +1238,16 @@ textarea {
     overflow-y: hidden;
   }
 
+  #pageContent4 {
+    width: 100vw;
+    position: relative;
+    display: block;
+    z-index: 0;
+    padding-bottom: 6vw;
+    padding-top: calc(100px + 2vw);
+    overflow-y: hidden;
+  }
+
   #bottomBorder {
     display: block;
     width: 92vw;
@@ -1636,6 +1646,16 @@ textarea {
     overflow-y: hidden;
   }
 
+  #pageContent4 {
+    width: 100vw;
+    position: relative;
+    display: block;
+    z-index: 0;
+    padding-bottom: 6vw;
+    padding-top: calc(70px + 2vw);
+    overflow-y: hidden;
+  }
+
   #bottomBorder {
     display: block;
     width: 95vw;
@@ -2025,6 +2045,16 @@ textarea {
   }
 
   #pageContent3 {
+    width: 100vw;
+    position: relative;
+    display: block;
+    z-index: 0;
+    padding-bottom: 6vw;
+    padding-top: calc(70px + 2vw);
+    overflow-y: hidden;
+  }
+
+  #pageContent4 {
     width: 100vw;
     position: relative;
     display: block;
